# AI_LEARNING_WEEK_2

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
models/: metrics.csv  preprocessor.joblib
notebooks/: 01_eda.ipynb  02_modeling.ipynb
scripts/: train.py
src/california_housing/: __init__.py
src/california_housing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/california_housing/preprocessing/: preprocessor.py
src/california_housing/utils/: evaluation.py
tests/: test_preprocessor.py
week2/: day10_case_study.ipynb  day7a_feature_engineering.ipynb  day7b_model_validation.ipynb  day8_feature_selection.ipynb  day9_model_comparison.ipynb
