[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "california_housing"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "California Housing Price Prediction Project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["california_housing*"]

[project.scripts]
train-housing = "california_housing.scripts.train:main"
